[package]
name = "sync-sessions-to-obsidian"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sync"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
walkdir = "2.4"
dirs = "5.0"
